# dailyvccase

.github/workflows/: deploy.yml
vc_research_starter/: .dockerignore  .env.example  .gitignore  ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  DATA_SOURCES.md  DECISIONS.md  Dockerfile  MANIFEST.txt  OPERATIONS.md  README.md  SOP.md  START_HERE.md  docker-compose.yml  pyproject.toml  test_workbench.py
vc_research_starter/.agents/skills/china-comparable/: SKILL.md
vc_research_starter/.agents/skills/evidence-qa/: SKILL.md
vc_research_starter/.agents/skills/vc-case-research/: SKILL.md
vc_research_starter/config/: codex-config.example.toml  project.yaml  quality.yaml  sources.yaml  taxonomy.yaml
vc_research_starter/data/raw/: case_conflict.fixture.json  case_low_comparable.fixture.json  case_pass.fixture.json  fixture_candidates.csv
vc_research_starter/prompts/: CODEX_BOOTSTRAP_PROMPT.md  RESEARCH_CASE_PROMPT.md
vc_research_starter/schemas/: case.schema.json  claim.schema.json  source.schema.json
vc_research_starter/src/vc_research/: __init__.py  cli.py  config.py  fixtures.py  ingest.py  monitoring.py  normalize.py  publishing.py  qa.py  rendering.py  scoring.py  storage.py
vc_research_starter/src/vc_research/models/: __init__.py  core.py
vc_research_starter/templates/: candidate_queue.csv  daily_memo.md  evidence_log.csv  financing_history.csv
