[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vc-research"
version = "0.1.0"
description = "Provenance-first VC case research workbench MVP"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2",
  "pyyaml>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
vc-research = "vc_research.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vc_research"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
